[gd_scene load_steps=127 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/AnimatedPlayerSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Player/Girl/Idle (1).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Girl/Idle (2).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Girl/Idle (3).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Girl/Idle (4).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Girl/Idle (5).png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/Girl/Idle (6).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/Girl/Idle (7).png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/Girl/Idle (8).png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/Girl/Idle (9).png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/Girl/Idle (10).png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/Girl/Idle (11).png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/Girl/Idle (12).png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/Girl/Idle (13).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/Girl/Idle (14).png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/Girl/Idle (15).png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/Girl/Idle (16).png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/Girl/Jump (1).png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/Girl/Jump (2).png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/Girl/Jump (3).png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/Girl/Jump (4).png" type="Texture" id=22]
[ext_resource path="res://Sprites/Player/Girl/Jump (5).png" type="Texture" id=23]
[ext_resource path="res://Sprites/Player/Girl/Jump (6).png" type="Texture" id=24]
[ext_resource path="res://Sprites/Player/Girl/Jump (7).png" type="Texture" id=25]
[ext_resource path="res://Sprites/Player/Girl/Jump (8).png" type="Texture" id=26]
[ext_resource path="res://Sprites/Player/Girl/Jump (9).png" type="Texture" id=27]
[ext_resource path="res://Sprites/Player/Girl/Jump (10).png" type="Texture" id=28]
[ext_resource path="res://Sprites/Player/Girl/Jump (11).png" type="Texture" id=29]
[ext_resource path="res://Sprites/Player/Girl/Jump (12).png" type="Texture" id=30]
[ext_resource path="res://Sprites/Player/Girl/Jump (13).png" type="Texture" id=31]
[ext_resource path="res://Sprites/Player/Girl/Jump (14).png" type="Texture" id=32]
[ext_resource path="res://Sprites/Player/Girl/Jump (15).png" type="Texture" id=33]
[ext_resource path="res://Sprites/Player/Girl/Jump (16).png" type="Texture" id=34]
[ext_resource path="res://Sprites/Player/Girl/Jump (17).png" type="Texture" id=35]
[ext_resource path="res://Sprites/Player/Girl/Jump (18).png" type="Texture" id=36]
[ext_resource path="res://Sprites/Player/Girl/Jump (19).png" type="Texture" id=37]
[ext_resource path="res://Sprites/Player/Girl/Jump (20).png" type="Texture" id=38]
[ext_resource path="res://Sprites/Player/Girl/Run (1).png" type="Texture" id=39]
[ext_resource path="res://Sprites/Player/Girl/Run (2).png" type="Texture" id=40]
[ext_resource path="res://Sprites/Player/Girl/Run (3).png" type="Texture" id=41]
[ext_resource path="res://Sprites/Player/Girl/Run (4).png" type="Texture" id=42]
[ext_resource path="res://Sprites/Player/Girl/Run (5).png" type="Texture" id=43]
[ext_resource path="res://Sprites/Player/Girl/Run (6).png" type="Texture" id=44]
[ext_resource path="res://Sprites/Player/Girl/Run (7).png" type="Texture" id=45]
[ext_resource path="res://Sprites/Player/Girl/Run (8).png" type="Texture" id=46]
[ext_resource path="res://Sprites/Player/Girl/Run (9).png" type="Texture" id=47]
[ext_resource path="res://Sprites/Player/Girl/Run (10).png" type="Texture" id=48]
[ext_resource path="res://Sprites/Player/Girl/Run (11).png" type="Texture" id=49]
[ext_resource path="res://Sprites/Player/Girl/Run (12).png" type="Texture" id=50]
[ext_resource path="res://Sprites/Player/Girl/Run (13).png" type="Texture" id=51]
[ext_resource path="res://Sprites/Player/Girl/Run (14).png" type="Texture" id=52]
[ext_resource path="res://Sprites/Player/Girl/Run (15).png" type="Texture" id=53]
[ext_resource path="res://Sprites/Player/Girl/Run (16).png" type="Texture" id=54]
[ext_resource path="res://Sprites/Player/Girl/Run (17).png" type="Texture" id=55]
[ext_resource path="res://Sprites/Player/Girl/Run (18).png" type="Texture" id=56]
[ext_resource path="res://Sprites/Player/Girl/Run (19).png" type="Texture" id=57]
[ext_resource path="res://Sprites/Player/Girl/Run (20).png" type="Texture" id=58]
[ext_resource path="res://Sprites/Player/Girl/Walk (1).png" type="Texture" id=59]
[ext_resource path="res://Sprites/Player/Girl/Walk (2).png" type="Texture" id=60]
[ext_resource path="res://Sprites/Player/Girl/Walk (3).png" type="Texture" id=61]
[ext_resource path="res://Sprites/Player/Girl/Walk (4).png" type="Texture" id=62]
[ext_resource path="res://Sprites/Player/Girl/Walk (5).png" type="Texture" id=63]
[ext_resource path="res://Sprites/Player/Girl/Walk (6).png" type="Texture" id=64]
[ext_resource path="res://Sprites/Player/Girl/Walk (7).png" type="Texture" id=65]
[ext_resource path="res://Sprites/Player/Girl/Walk (8).png" type="Texture" id=66]
[ext_resource path="res://Sprites/Player/Girl/Walk (9).png" type="Texture" id=67]
[ext_resource path="res://Sprites/Player/Girl/Walk (10).png" type="Texture" id=68]
[ext_resource path="res://Sprites/Player/Girl/Walk (11).png" type="Texture" id=69]
[ext_resource path="res://Sprites/Player/Girl/Walk (12).png" type="Texture" id=70]
[ext_resource path="res://Sprites/Player/Girl/Walk (13).png" type="Texture" id=71]
[ext_resource path="res://Sprites/Player/Girl/Walk (14).png" type="Texture" id=72]
[ext_resource path="res://Sprites/Player/Girl/Walk (15).png" type="Texture" id=73]
[ext_resource path="res://Sprites/Player/Girl/Walk (16).png" type="Texture" id=74]
[ext_resource path="res://Sprites/Player/Girl/Walk (17).png" type="Texture" id=75]
[ext_resource path="res://Sprites/Player/Girl/Walk (18).png" type="Texture" id=76]
[ext_resource path="res://Sprites/Player/Girl/Walk (19).png" type="Texture" id=77]
[ext_resource path="res://Sprites/Player/Girl/Walk (20).png" type="Texture" id=78]
[ext_resource path="res://Sprites/Player/Girl/Jump (22).png" type="Texture" id=79]
[ext_resource path="res://Sprites/Player/Girl/Jump (23).png" type="Texture" id=80]
[ext_resource path="res://Sprites/Player/Girl/Jump (24).png" type="Texture" id=81]
[ext_resource path="res://Sprites/Player/Girl/Jump (25).png" type="Texture" id=82]
[ext_resource path="res://Sprites/Player/Girl/Jump (26).png" type="Texture" id=83]
[ext_resource path="res://Sprites/Player/Girl/Jump (27).png" type="Texture" id=84]
[ext_resource path="res://Sprites/Player/Girl/Jump (28).png" type="Texture" id=85]
[ext_resource path="res://Sprites/Player/Girl/Jump (29).png" type="Texture" id=86]
[ext_resource path="res://Sprites/Player/Girl/Jump (30).png" type="Texture" id=87]
[ext_resource path="res://Sprites/Player/Girl/Jump (21).png" type="Texture" id=88]
[ext_resource path="res://Sprites/Player/Girl/Dead (1).png" type="Texture" id=89]
[ext_resource path="res://Sprites/Player/Girl/Dead (2).png" type="Texture" id=90]
[ext_resource path="res://Sprites/Player/Girl/Dead (3).png" type="Texture" id=91]
[ext_resource path="res://Sprites/Player/Girl/Dead (4).png" type="Texture" id=92]
[ext_resource path="res://Sprites/Player/Girl/Dead (5).png" type="Texture" id=93]
[ext_resource path="res://Sprites/Player/Girl/Dead (6).png" type="Texture" id=94]
[ext_resource path="res://Sprites/Player/Girl/Dead (7).png" type="Texture" id=95]
[ext_resource path="res://Sprites/Player/Girl/Dead (8).png" type="Texture" id=96]
[ext_resource path="res://Sprites/Player/Girl/Dead (9).png" type="Texture" id=97]
[ext_resource path="res://Sprites/Player/Girl/Dead (10).png" type="Texture" id=98]
[ext_resource path="res://Sprites/Player/Girl/Dead (11).png" type="Texture" id=99]
[ext_resource path="res://Sprites/Player/Girl/Dead (12).png" type="Texture" id=100]
[ext_resource path="res://Sprites/Player/Girl/Dead (13).png" type="Texture" id=101]
[ext_resource path="res://Sprites/Player/Girl/Dead (14).png" type="Texture" id=102]
[ext_resource path="res://Sprites/Player/Girl/Dead (15).png" type="Texture" id=103]
[ext_resource path="res://Sprites/Player/Girl/Dead (16).png" type="Texture" id=104]
[ext_resource path="res://Sprites/Player/Girl/Dead (17).png" type="Texture" id=105]
[ext_resource path="res://Sprites/Player/Girl/Dead (18).png" type="Texture" id=106]
[ext_resource path="res://Sprites/Player/Girl/Dead (19).png" type="Texture" id=107]
[ext_resource path="res://Sprites/Player/Girl/Dead (20).png" type="Texture" id=108]
[ext_resource path="res://Sprites/Player/Girl/Dead (21).png" type="Texture" id=109]
[ext_resource path="res://Sprites/Player/Girl/Dead (22).png" type="Texture" id=110]
[ext_resource path="res://Sprites/Player/Girl/Dead (23).png" type="Texture" id=111]
[ext_resource path="res://Sprites/Player/Girl/Dead (24).png" type="Texture" id=112]
[ext_resource path="res://Sprites/Player/Girl/Dead (25).png" type="Texture" id=113]
[ext_resource path="res://Sprites/Player/Girl/Dead (26).png" type="Texture" id=114]
[ext_resource path="res://Sprites/Player/Girl/Dead (27).png" type="Texture" id=115]
[ext_resource path="res://Sprites/Player/Girl/Dead (28).png" type="Texture" id=116]
[ext_resource path="res://Sprites/Player/Girl/Dead (29).png" type="Texture" id=117]
[ext_resource path="res://Sprites/Player/Girl/Dead (30).png" type="Texture" id=118]
[ext_resource path="res://Sounds/sound_jump.wav" type="AudioStream" id=119]
[ext_resource path="res://Scenes/ParallaxBackgroundGreenHills.tscn" type="PackedScene" id=120]
[ext_resource path="res://Scenes/Player/BeerCollector.gd" type="Script" id=121]
[ext_resource path="res://Scenes/Player/Beers.gd" type="Script" id=122]
[ext_resource path="res://Scenes/Player/Lives.gd" type="Script" id=123]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": false,
"name": "Jumping",
"speed": 24.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "Running",
"speed": 24.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ) ],
"loop": true,
"name": "Walking",
"speed": 24.0
}, {
"frames": [ ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ) ],
"loop": false,
"name": "Landing",
"speed": 24.0
}, {
"frames": [ ExtResource( 88 ) ],
"loop": false,
"name": "Falling",
"speed": 24.0
}, {
"frames": [ ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ) ],
"loop": false,
"name": "Dead",
"speed": 24.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.0
height = 45.0

[sub_resource type="Animation" id=3]
resource_name = "Flashing"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 336.4 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -400
limit_bottom = 500
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Sprite" parent="." instance=ExtResource( 2 )]
frames = SubResource( 1 )
frame = 3

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 119 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 120 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6.355 )
z_index = 4
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 75, 18 )
z_index = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/Flashing = SubResource( 3 )

[node name="BeerCollector" type="Area2D" parent="."]
script = ExtResource( 121 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BeerCollector"]
position = Vector2( 0, 6.35501 )
z_index = 4
shape = SubResource( 2 )

[node name="Beers" type="Node" parent="."]
script = ExtResource( 122 )

[node name="Lives" type="Node" parent="."]
script = ExtResource( 123 )
[connection signal="life_lost" from="." to="Lives" method="_on_Player_life_lost"]
[connection signal="reset_beer_count" from="." to="Beers" method="_on_Player_reset_beer_count"]
[connection signal="reset_lives" from="." to="Lives" method="_on_Player_reset_lives"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="BeerCollector" to="BeerCollector" method="_on_BeerCollector_area_entered"]
[connection signal="beer_collected" from="BeerCollector" to="Beers" method="_on_BeerCollector_beer_collected"]
[connection signal="game_over" from="Lives" to="." method="_on_Lives_game_over"]
